<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".LoginActivity" >

    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:orderInCategory="0"
          android:title="@string/refresh"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_requests"
          android:icon="@drawable/requestspending_off"
          android:title="@string/requests"
          android:orderInCategory="1"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_discovery"
          android:icon="@drawable/ic_discovery_off"
          android:orderInCategory="2"
          android:title="@string/discovery"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_sendphone"
          android:icon="@drawable/ic_action_phone"
          android:orderInCategory="3"
          android:title="@string/sendSMS"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="3"
          android:showAsAction="never" />

</menu>
