<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".LoginActivity" >

    <item android:id="@+id/action_discovery"
          android:icon="@drawable/ic_discovery_off"
          android:orderInCategory="0"
          android:title="Discovery"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_mycard"
          android:title="@string/action_mycard"
          android:orderInCategory="1"
          android:showAsAction="never" />

    <item android:id="@+id/action_findcards"
          android:title="@string/action_findcards"
          android:orderInCategory="2"
          android:showAsAction="never" />

    <item android:id="@+id/action_savedcards"
          android:title="@string/action_savedcards"
          android:orderInCategory="3"
          android:showAsAction="never" />

    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="3"
          android:showAsAction="never" />

</menu>
