<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#2C51A2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_lower"
        android:textAllCaps="false"
        android:id="@+id/title"
        android:textSize="42sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:singleLine="true"
        android:inputType="text"
        android:hint="@string/username"
        android:id="@+id/username_login"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_login"
        android:layout_marginTop="5dp"
        android:id="@+id/password_login"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"/>
    
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="#093698"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:id="@+id/button_login"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginTop="10dp"
        android:background="#093698"
        android:text="Sign Up with Facebook"
        android:textColor="#FFFFFF"
        android:id="@+id/button_fb_login"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:id="@+id/link_signup"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
